<resources>
    <string name="app_name">Carbon Footprint</string>
    <string name="editText">Write here</string>
    <string name="button2">Next Page</string>
    <string name="button3">Add Your Results to App Average</string>

    <string name="aboutText">App</string>
    <string name="wasteHeader">WASTE</string>
    <string name="calculatorHeader">C02 CALCULATOR</string>
    <string name="num_people_household">Number of people in your household</string>
    <string name="number_of_people_in_your_household">Number of people in your household</string>
    <string name="metalHint">Do you recycle aluminum? (y/n)</string>
    <string name="glassHint">Do you recycle glass? (y/n)</string>
    <string name="plasticHint">Do you recycle plastic? (y/n)</string>
    <string name="newspaperHint">Do you recycle newspaper? (y/n)</string>
    <string name="magazinesHint">Do you recycle magazines? (y/n)</string>
    <string name="buttonEstimateCO2">Estimated CO2</string>
    <string name="button">Button</string>
    <string name="num_people">Enter the number of people in your household</string>
    <string name="estimated_waste">Estimated Waste</string>
    <string name="num_people_text">Number of People</string>
    <string name="metal_text">Metal</string>
    <string name="glass_text">Glass</string>
    <string name="plastic_text">Plastic</string>
    <string name="newspaper_text">Newspaper</string>
    <string name="magazines_text">Magazines</string>
    <string name="metal_hint">(y/n)</string>
    <string name="glass_hint">(y/n)</string>
    <string name="plastic_hint">(y/n)</string>
    <string name="newspaper_hint">(y/n)</string>
    <string name="magazines_hint">(y/n)</string>
    <string name="people_text">How many people are in your household?</string>
    <string name="metal_question">Do you recycle metal?</string>
    <string name="glass_question">Do you recycle glass?</string>
    <string name="plastic_question">Do you recycle plastic?</string>
    <string name="newspaper_question">Do you recycle newspaper?</string>
    <string name="magazines_question">Do you recycle magazines?</string>
    <string name="space_hint" />
    <string name="people_hint">1-100</string>
    <string name="waste_button">Estimated Annual Waste</string>


    <string name="Heating">Heating</string>
    <string name="primeHeat">What is your primary Heat source?</string>
    <string name="naturalGas">Natural Gas</string>
    <string name="utility">Utility</string>
    <string name="description">Enter your average monthly bill in US dollars for each source of energy your household uses.</string>
    <string name="averageBill">Enter your average monthly bill</string>
    <string name="electricity">Electricity</string>
    <string name="fuelOil">Fuel Oil</string>
    <string name="propane">Propane</string>
    <string name="submit">Next</string>
    <string name="reduceEmissions">Reduce your Emissions</string>
    <string name="heatingAndCooling">Heating and Cooling</string>
    <string name="acThermostat">How many degrees will you turn your thermostat up in the summer?</string>
    <string name="acThermostatInput">Enter the amount of degrees.</string>
    <string name="winterThermostat">How many degrees will you turn down your thermostat in the winter?</string>
    <string name="winterThermostatInput">Enter the amount of degrees.</string>
    <string name="lighting">Reduce Lighting</string>
    <string name="reduceLighting">How many light bulbs will you replace with ENERGY STAR light bulbs</string>
    <string name="reduceLightingInput">Enter the amount of light bulbs you will change.</string>
    <string name="washingAndDrying">Washing and Drying</string>
    <string name="coldWater">How many loads of Laundry will you use cold water?</string>
    <string name="coldWaterInput">Enter the amount of loads.</string>
    <string name="energyStar">ENERGY STAR Products</string>
    <string name="energyStarModels">Will you replace any of the following with ENERGY STAR models?</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="furnaceBoiler">Furnace or Boiler</string>
    <string name="windows">Windows</string>
    <string name="reduceSubmit">Submit</string>
    <string name="calculatorHome">Calculator</string>
    <string name="houseHoldNumber">How many people are in your household?</string>
    <string name="householdnumberInput">Household Size</string>
    <string name="homeEnergy">Home Energy</string>
    <string name="waste">Waste</string>
    <string name="getResults">Results</string>
    <string name="submit1">Submit</string>

    <string-array name="units">
        <item>Select an Option</item>
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>


    <string-array name="starProducts">
        <item>Select an Option</item>
        <item>Will Do</item>
        <item>Will not do</item>
    </string-array>

    <string-array name="Utility">
        <item>Select an Option</item>
        <item>Natural Gas</item>
        <item>Electricity</item>
        <item>Fuel Oil</item>
        <item>Propane</item>
    </string-array>


    <string name="vehicleText">How many vehicles does your household have?</string>
    <string-array name="numVehicles">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="maintenanceQuestion">Have you performed regular maintenance on your vehicle(s)?</string>
    <string-array name="maintenanceAnswer">
        <item>Have Not Done</item>
        <item>Already Done</item>
    </string-array>
    <string name="milesQuestion">Enter the average amount your household vehicle(s) are used and their energy efficiency.</string>
    <string name="miles">Miles</string>
    <string-array name="time">
        <item>Per Year</item>
        <item>Per Week</item>
    </string-array>
    <string name="mileageQuestion">Average gas mileage:</string>
    <string name="miles_per_gallon">Miles per gallon</string>
    <string name="maintenance">Will you perform regular maintenance on your vehicle(s)?</string>
    <string-array name="answer">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="reduceMile">Reduce the number of miles you drive by:</string>
    <string name="replaceOne">Replace vehicle 1 with one that gets:</string>
    <string name="back_to_home_energy">Back to Home Energy</string>
    <string name="continue_to_waste">Continue to Waste</string>
    <string name="transportation">Transportation</string>
    <string name="_0">0</string>
    <string name="whether_you_will_perform_maintenance">Whether you will perform Maintenance</string>
    <string name="Weekly_or_Yearly">Whether time period is weekly or yearly</string>
    <string name="whether_miles_is_based_on_week_or_years">Whether miles is based on week or years</string>
    <string name="Reduce_Weekly_Yearly">Whether miles is based on week or years</string>
    <string name="replaceTwo">Replace vehicle 2 with one that gets:</string>
    <string name="reduceTitle">Reduce Your Emissions</string>
    <string name="replaceThree">Replace vehicle 3 with one that gets:</string>
    <string name="recycle_newspaper">Are you willing to recycle newspaper?</string>
    <string name="recycle_plastic">Are you willing to recycle plastic?</string>
    <string name="recycle_metal">Are you willing to recycle metal?</string>
    <string name="recycle_glass">Are you willing to recycle glass?</string>
    <string name="recycle_magazines">Are you willing to recycle magazines?</string>
    <string name="recycle_newspaper_to_reduce_score">Are you willing to recycle newspaper to reduce your score?</string>
    <string name="recycle_plastic_to_reduce_score">Are you willing to recycle plastic to reduce your score?</string>
    <string name="recycle_metal_to_reduce_score">Are you willing to recycle metal to reduce your score?</string>
    <string name="recycle_glass_to_reduce_score">Are you willing to recycle glass to reduce your score?</string>
    <string name="recycle_magazines_to_reduce_score">Are you willing to recycle magazines to reduce your score?</string>
    <string name="home_energy_button">Home Energy</string>
    <string name="transportation_button">Transportation</string>
    <string name="begin_button">press here to begin</string>
    <string name="welcome_text">Welcome!</string>
    <string name="beginbtntext">press here to begin calculating your emissions</string>
    <string name="welcometext">WELCOME TO CARBON FOOTPRINT</string>
    <string name="waste_reduce_title">REDUCE YOUR SCORE</string>
    <string name="checkBox">Please check all that apply</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_pastresults">Past Results</string>
    <string name="title_settings">Settings</string>
    <string name="title_dataVisualization">Data Visualization</string>
    <string name="aboutAppText">This app allows users to calculate their approximate CO2 emissions, compare them with the average in their location, track them, and visualize CO2 emissions data in a world map.\n\nTo calculate users\' approximate CO2 emissions, the calculator estimates the users\' CO2 emissions in three areas: Home Energy, Transportation, and Waste.</string>
    <string name="aboutTransText">Takes into account how much users drive in their vehicle(s) and whether they have maintained them or not.</string>
    <string name="aboutHomeText">Checks for users\' everyday household use of natural gas, electricity, fuel oil, and propane.</string>
    <string name="aboutWasteText">Asks if users recycle products such as plastic, glass, newspaper, etc.</string>
    <string name="sources_github"><![CDATA[Sources & GitHub]]></string>
    <string name="source">Sources:</string>
    <string name="github">Github:</string>
    <string name="sourceSite"><a href = "https://www3.epa.gov/carbon-footprint-calculator/">United States Environmental Protection Agency</a></string>
    <string name="WBsourceSite"><a href = "https://data.worldbank.org/">The World Bank</a></string>
    <string name="MaxMindsource"><a href = "https://dev.maxmind.com/geoip/legacy/codes">MaxMind (country codes and names resource)</a></string>
    <string name="MPAndroidChartsource"><a href = "https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a></string>
    <string name="gitLink"><a href = "https://github.com/paceuniversity/cs389f2021team7">CS389 Fall 2021, Team 7</a></string>

</resources>