<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeEnergy">


    <TextView
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/Heating"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Heating" />

    <TextView
        android:id="@+id/primaryHeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primeHeat"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="What is your primary heat source?" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:autofillHints="Select Source"
        android:entries="@array/Utility"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/primaryHeat"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/primaryHeat"
        app:layout_constraintTop_toBottomOf="@+id/primaryHeat" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="304dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="304dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/utility"
                    android:layout_width="147dp"
                    android:layout_height="61dp"
                    android:layout_marginStart="150dp"
                    android:layout_marginEnd="150dp"
                    android:text="@string/utility"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="78dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/naturalGas"
                    android:layout_width="178dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/naturalGas" />

                <EditText
                    android:id="@+id/naturalGasInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/averageBill"
                    android:inputType="number"
                    android:minHeight="48dp"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:autofillHints="Enter your natural gas" />

                <TextView
                    android:id="@+id/electricity"
                    android:layout_width="277dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/electricity" />

                <EditText
                    android:id="@+id/electricityInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/averageBill"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/fuelOil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/fuelOil" />

                <EditText
                    android:id="@+id/fuelOilInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/averageBill"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/propane"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/propane" />

                <EditText
                    android:id="@+id/propaneInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/averageBill"
                    android:inputType="number" />

                <Button
                    android:id="@+id/estimatedC02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="320dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="305dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reduceEmissions"
                    android:layout_width="339dp"
                    android:layout_height="83dp"
                    android:layout_marginStart="110dp"
                    android:text="@string/reduceEmissions" />

                <TextView
                    android:id="@+id/heatingAndCooling"
                    android:layout_width="382dp"
                    android:layout_height="49dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/heatingAndCooling" />

                <TextView
                    android:id="@+id/acThermostat"
                    android:layout_width="wrap_content"
                    android:layout_height="87dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/acThermostat" />

                <EditText
                    android:id="@+id/acThermostatInput"
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/acThermostatInput"
                    android:inputType="number"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/winterThermostat"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/winterThermostat" />

                <EditText
                    android:id="@+id/winterThermostatInput"
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/winterThermostatInput"
                    android:inputType="number"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/lighting"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/lighting" />

                <TextView
                    android:id="@+id/reduceLighting"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/reduceLighting" />

                <EditText
                    android:id="@+id/reduceLightingInput"
                    android:layout_width="match_parent"
                    android:layout_height="99dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/reduceLightingInput"
                    android:inputType="number"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/washingAndDrying"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/washingAndDrying" />

                <TextView
                    android:id="@+id/coldWater"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/coldWater" />

                <EditText
                    android:id="@+id/coldWaterInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/coldWaterInput"
                    android:inputType="number"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/energyStar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/energyStar" />

                <TextView
                    android:id="@+id/refrigerator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/refrigerator" />

                <Spinner
                    android:id="@+id/starEnergyRefrigerator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:entries="@array/starProducts"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/furnaceBoiler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/furnaceBoiler" />

                <Spinner
                    android:id="@+id/starEnergyFurnaceBoiler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:entries="@array/starProducts"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/window"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/windows"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/starEnergyWindow"
                    android:layout_width="367dp"
                    android:layout_height="39dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="100dp"
                    android:entries="@array/starProducts"
                    android:minHeight="100dp"
                    android:autofillHints="Select an option"
                    android:visibility="visible" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>