<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.carbonfootprint.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pastresults"
        android:name="com.example.carbonfootprint.PastResultsFragment"
        android:label="@string/title_pastresults"
        tools:layout="@layout/fragment_past_results" />

    <fragment
        android:id="@+id/navigation_dataVisualization"
        android:name="com.example.carbonfootprint.DataVisualizationFragment"
        android:label="Data Visualization"
        tools:layout="@layout/fragment_data_visualization" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.carbonfootprint.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>